--- a/src/site/notes/复习/健康教育.md
+++ b/src/site/notes/复习/健康教育.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"author":"Junwen Zhou","date":"2023-11-19","permalink":"///","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"///","dgPassFrontmatter":true}
 ---
 
 
