--- a/src/site/notes/各种pre/鉴定网络热门健康视频.md
+++ b/src/site/notes/各种pre/鉴定网络热门健康视频.md
@@ -1,5 +1,5 @@
 ---
-{"author":"Junwen Zhou","dg-publish":true,"permalink":"/pre//","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/pre//","dgPassFrontmatter":true}
 ---
 
 
