--- a/src/site/notes/复习/传播复习.md
+++ b/src/site/notes/复习/传播复习.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"///","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/复习/传播复习/","dgPassFrontmatter":true}
 ---
 
 # 绪论
