--- a/src/site/notes/复习/健康教育.md
+++ b/src/site/notes/复习/健康教育.md
@@ -1,9 +1,9 @@
 ---
-{"dg-publish":true,"permalink":"///","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/复习/健康教育/","dgPassFrontmatter":true}
 ---
 
 
-前三章看看ppt，内容太杂了
+前三章看看ppt，内容太杂了,jiayou
 # 绪论
 #### 健康的影响因素
 基因（微生物）、环境、健康系统、行为/生活方式
