--- a/src/site/notes/各种pre/鉴定网络热门健康视频.md
+++ b/src/site/notes/各种pre/鉴定网络热门健康视频.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/pre//","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/各种pre/鉴定网络热门健康视频/","dgPassFrontmatter":true}
 ---
 
 
@@ -94,7 +94,7 @@ R：
 这个视频讲的是一个老太太因为撞树导致血栓。老人家们往往有骨质疏松、高血压、心脑血管等老毛病。如果撞树力度过大，容易造成局部软组织血肿或损伤。而撞树方向偏斜，用力不当，极容易导致摔倒与骨折的发生，进而影响老人的生命安全与身体健康。<br>
 同时，老年人往往有血管硬化的问题，部分血管会有斑块的形成。在撞树过程中，有可能导致血管斑块的脱落，如果斑块流到心脏或大脑这些血管狭窄的地方，很容易堵住血管，就像下水道被异物堵住一样，形成心脑血管栓塞，也就是俗称的心肌梗死与脑梗死。如果是年轻人，撞树的风险还比较小，但对于咱们老人家来说，我们建议选择更安全的养生方式。<br>
 我们老祖宗还留下了其它很多被现代科学认可的运动养生方式，包括太极拳、八段锦、五禽戏等，他们的效果不比撞树差，练起来也没有撞树那么痛苦，还非常的安全，下次遇到撞友，您就这么练</font>
-
+ dongl
 
 
 
