--- a/src/site/notes/math/pttjx/第九章作业.md
+++ b/src/site/notes/math/pttjx/第九章作业.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/math/pttjx/第九章作业/","dgPassFrontmatter":true}
+{"dg-publish":true,"author":"Junwen Zhou","permalink":"/math/pttjx/第九章作业/","dgPassFrontmatter":true}
 ---
 
 
