--- a/src/site/notes/主页.md
+++ b/src/site/notes/主页.md
@@ -17,9 +17,20 @@
 # 目录
 >这里展示目前已经构建的知识库，每个后面都有可以访问的内部链接
 ## ✨✨✨Epidemiology and Health Statistics
->该文件夹收集流行病与卫生统计学的专业知识。这是我的专业领域。在这里，我收集了一些流行病学、卫生统计学、传染病建模等领域的专业教材，以及我在阅读这些教材时的笔记和总结。后续我还会在这里记录我的一些科研过程。
+>该文件夹收集流行病与卫生统计学的专业知识。这是我的专业领域。在这里，我收集了一些流行病学、卫生统计学、传染病建模等领域的专业教材，以及我在阅读这些教材时的笔记和总结。后续我还会在这里记录我的一些科研过程。目前，该文件夹下主要包括“Math”和“传染病建模”两个子文件夹。
+### Math
+>[!tip]
+>Math文件夹主要包括本部课程《普通统计学》的作业、总结以及对一些问题的思考。
+>特别鸣谢：<font color='7FFFD4'><i>马秦怡同学</i></font>。感谢这位智慧美丽的同学的严谨的治学态度以及不断探索的精神，使该文件夹的内容得到充实。
+>如果后续由于研究方向的需要，我也可能会在这里放上其他的一些数学工具。
 
 <font size = 4 color='#7FFFD4'>点击跳转：</font>
+[[Epidemiology_and_Health_Statistics/math/pttjx/贝叶斯公式应用题\|贝叶斯公式应用题]]
+[[Epidemiology_and_Health_Statistics/math/pttjx/概率密度函数\|概率密度函数]]
+[[Epidemiology_and_Health_Statistics/math/pttjx/普通统计学期中复习\|普通统计学期中复习]]
+[[Epidemiology_and_Health_Statistics/math/pttjx/第七章：总体均值的比较作业\|第七章：总体均值的比较作业]]
+[[Epidemiology_and_Health_Statistics/math/pttjx/第八章：相关与回归作业\|第八章：相关与回归作业]]
+[[Epidemiology_and_Health_Statistics/math/pttjx/第九章作业\|第九章作业]]
 [[Epidemiology_and_Health_Statistics/Principles of Biostatistics\|Principles of Biostatistics]]
 [[Epidemiology_and_Health_Statistics/modelling_infectious_diseases/Modeling Infectious Diseases IN HUMANS AND ANIMALS\|Modeling Infectious Diseases IN HUMANS AND ANIMALS]]
 
@@ -46,6 +57,19 @@
 <font size = 4 color='#7FFFD4'>点击跳转：</font>
  [[学期课程/传播复习\|传播复习]]
  [[学期课程/健康教育\|健康教育]][^1]
+## 心理学
+>心理学是我非常感兴趣的学科，或者，更准确的说，我感兴趣的是心理学能教会我进行自我察觉，让我更清楚地认识自己的性格、能力、喜好以及缺陷，以及这些背后的机制；同时，能指导我建立良好的亲密关系，而这是我的理想；心理学中心理咨询的部分，不仅能帮助他人，也能让我自己在遇到困境时自我排解。目前心理学文件夹主要包括课程《朋辈心理辅导》的一些知识、我自己收集到的心理学书籍汇总，以及我的一些读书感悟。未来我可能会利用学到的心理学理论对我个人，对亲密关系等进行分析，分析的过程也会附上。
 
+### 朋辈心理辅导
+>这门课程主要介绍了认知行为疗法和辩证行为疗法在朋辈心理辅导中的应用
+#### 认知行为疗法
+[[心理学/朋辈心理辅导/认知行为疗法/自动思维\|自动思维]]
+[[心理学/朋辈心理辅导/认知行为疗法/中间信念\|中间信念]]
+[[心理学/朋辈心理辅导/认知行为疗法/核心信念\|核心信念]]
+#### 辩证行为疗法
+[[心理学/朋辈心理辅导/辩证行为疗法/辩证行为疗法了了分明\|辩证行为疗法了了分明]]
+[[心理学/朋辈心理辅导/辩证行为疗法/辩证行为疗法第二次课：人际效能\|辩证行为疗法第二次课：人际效能]]
+[[心理学/朋辈心理辅导/辩证行为疗法/辩证行为疗法 第三次课\|辩证行为疗法 第三次课]]
+[[心理学/朋辈心理辅导/辩证行为疗法/辩证行为疗法第四节课\|辩证行为疗法第四节课]]
 
 [^1]健康传播这门课程的总结任务还很艰巨
