--- a/src/site/notes/math/pttjx/第七章：总体均值的比较作业.md
+++ b/src/site/notes/math/pttjx/第七章：总体均值的比较作业.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"author":"Junwen Zhou","permalink":"/math/pttjx/第七章：总体均值的比较作业/","dgPassFrontmatter":true}
+{"author":"Junwen Zhou","permalink":"/math/pttjx/第七章：总体均值的比较作业/","dgPassFrontmatter":true}
 ---
 
 
