--- a/src/site/notes/主页.md
+++ b/src/site/notes/主页.md
@@ -2,7 +2,7 @@
 {"title":"周俊文的obsidian","dg-publish":true,"dg-home":true,"permalink":"/主页/","tags":["gardenEntry"],"dgPassFrontmatter":true}
 ---
 
-![封面图，致一位我喜欢的人](/img/user/images/white-horse-3010129_1920.jpg)
+![images/white-horse-3010129_1920.jpg](/img/user/images/white-horse-3010129_1920.jpg)
 
 <font size=5 color='#9AFF9A'><i>🥳🎆🎉✨欢迎来到周俊文的obsidian知识库！</i></font>
 这是周俊文的obsidian空间，我将会在这里记录、收集、展示我学过的知识、技能以及我的一些想法和经验。
