--- a/src/site/notes/Epidemiology_and_Health_Statistics/卫生统计学学习.md
+++ b/src/site/notes/Epidemiology_and_Health_Statistics/卫生统计学学习.md
@@ -26,6 +26,28 @@ maximum likelihood estimator：最大似然估计
 一种统计方法，用于根据已知的观测数据来估计未知参数的值，该方法基于最大化观测数据出现的概率，假设观测数据是独立同分布的？
 standard error：标准误差（标准误）标准误差：随机变量的概率函数或概率密度函数的标准差，特别是指从具有正态分布的总体中抽取的样本的平均值的标准误差，它等于正态分布的标准差除以样本大小的平方根。
 
+## 13 Nonparametric Methods 非参数检验
+问题：什么时候用非参数检验？
+答：当我们不能假定总体服从正态分布时，比如当我们处理一些序数资料时
+
+### The Sign Test（符号检验）
+核心：对中位数的估计，二项分布
+1. 单个样本对总体中位数的估计；
+2. 判断两个匹配的样本中位数是否相等
+零假设：$H_0$两个样本的中位数相等；备择假设$H_\alpha:$两个样本的中位数不相等
+第一步：两个样本相减，计数正负号，如果相等，剔除数据
+
+
+
+### The Wilcoxon Signed-Rank Test（符号秩和检验）
+
+$$d \sim F(x)$$
+
+
+### The Wilcoxon Rank Sum Test（秩和检验）
+
+
+
 ## 19. Multiple Regression
 
 ### The Model
