--- a/src/site/notes/主页.md
+++ b/src/site/notes/主页.md
@@ -31,7 +31,7 @@
 [[Epidemiology_and_Health_Statistics/math/pttjx/第七章：总体均值的比较作业\|第七章：总体均值的比较作业]]
 [[Epidemiology_and_Health_Statistics/math/pttjx/第八章：相关与回归作业\|第八章：相关与回归作业]]
 [[Epidemiology_and_Health_Statistics/math/pttjx/第九章作业\|第九章作业]]
-[[Epidemiology_and_Health_Statistics/卫生统计学学习\|卫生统计学学习]]
+[[Epidemiology_and_Health_Statistics/卫生统计学/卫生统计学学习\|卫生统计学学习]]
 [[Epidemiology_and_Health_Statistics/modelling_infectious_diseases/Modeling Infectious Diseases IN HUMANS AND ANIMALS\|Modeling Infectious Diseases IN HUMANS AND ANIMALS]]
 
 ## ✨✨资源库
