--- a/src/site/notes/Obsidian学习/资源库.md
+++ b/src/site/notes/Obsidian学习/资源库.md
@@ -3,6 +3,76 @@
 ---
 
 
+## R语言资源库
+
+### R语言学习的
+
+#### 网站
+[Home | RWeekly.org - Blogs to Learn R from the Community](https://rweekly.org/)
+<kbd>每周一更新，致力于跟进 R 语言的最新动态，汇聚各大网站的精选文章，涵盖的内容非常丰富</kbd>
+[Blog - Posit](https://posit.co/blog/)
+<kbd>Rstudio提供了各种教程以及资讯，甚至有ggplot2、tidy verse等的交流平台，点击“explore more”→“tidy verse”，在learn那里会推荐书籍，在blog那里有各种经验分享帖子</kbd>
+[R-bloggers](https://www.r-bloggers.com/)
+ 
+#### 学习资料
+[R for Data Science (2e)](https://r4ds.hadley.nz/)
+<kbd>学习tidy verse的书</kbd>
+[ggplot2: Elegant Graphics for Data Analysis (3e)](https://ggplot2-book.org/)
+<kbd>学习ggplot2的书</kbd>
+[R Graphics Cookbook, 2nd edition](https://r-graphics.org/)
+[R语言教程](https://www.math.pku.edu.cn/teachers/lidf/docs/Rbook/html/_Rbook/index.html)
+<kbd>数院老师写的学习R语言的书</kbd>
+[Quarto - Guide](https://quarto.org/docs/guide/)
+<kbd>quarto是一种比R markdown更时髦的R交流工具</kbd>
+
+### 专业相关的
+
+#### Meta分析类
+[用R进行meta分析（metafor包）_Christina-CSDN博客_metafor](https://blog.csdn.net/qq_42458954/article/details/81223124)
+[Doing Meta Analysis in R](https://bookdown.org/MathiasHarrer/Doing_Meta_Analysis_in_R/netwma.html)
+[R: GeMTC: Network meta-analysis in R](https://search.r-project.org/CRAN/refmans/gemtc/html/gemtc-package.html#:~:text=R%20Documentation%20GeMTC%3A%20Network%20meta-analysis%20in%20R%20Description,at%20the%20same%20time%20%5BDias%20et%20al.%202013a%5D.)
+[R and Meta-Analysis | R-bloggers](https://www.r-bloggers.com/2014/07/r-and-meta-analysis/)
+[Meta-analysis: generic inverse variance method](https://www.medcalc.org/manual/meta-generic.php)
+
+#### 生存分析类
+[手把手教你使用R语言建立COX回归并画出列线图(Nomogram)_dege857的博客-CSDN博客_r语言cox回归](https://blog.csdn.net/dege857/article/details/108627909)
+[Cox Proportional-Hazards Model | R-bloggers](https://www.r-bloggers.com/2016/12/cox-proportional-hazards-model/)
+[Survival Analysis with R | R-bloggers](https://www.r-bloggers.com/2017/04/survival-analysis-with-r/)
+[Example 7.30: Simulate censored survival data | R-bloggers](https://www.r-bloggers.com/2010/03/example-7-30-simulate-censored-survival-data/)
+
+#### 其他
+[Cubic and Smoothing Splines in R | DataScience+](https://datascienceplus.com/cubic-and-smoothing-splines-in-r/)
+[Simple Sensitivity Analysis with R - Complementary Training](https://complementarytraining.net/simple-sensitivity-analysis-with-r/)
+[Probabilistic Sensitivity Analysis with R | R-bloggers](https://www.r-bloggers.com/2018/02/probabilistic-sensitivity-analysis-with-r/)
+[ANCOVA in R: The Ultimate Practical Guide - Datanovia](https://www.datanovia.com/en/lessons/ancova-in-r/)
+
+|Splines are a smooth and flexible way of fitting Non linear Models and learning the Non linear interactions from the data. In most of the methods in which we fit Non linear Models to data and learn Non linearities is by transforming the data or the variables by applying a Non linear transformation.|
+|---|
+#### 逆概率加权
+[R语言超详细逆概率加权(IPTW)后生存曲线做法 - 简书](https://www.jianshu.com/p/3f358ee9c1af)
+[Inverse probability treatment weighting | R-bloggers](https://www.r-bloggers.com/2020/12/inverse-probability-treatment-weighting/)
+[RPubs - Using inverse probability of treatment weights &amp; Marginal structural models to handle time-varying covariates](https://rpubs.com/mbounthavong/IPTW_MSM_Tutorial)
+[R Tutorial 8: Propensity Score Matching](https://sejdemyr.github.io/r-tutorials/statistics/tutorial8.html)
+[mr_ivw: Inverse-variance weighted method in MendelianRandomization: Mendelian Randomization Package](https://rdrr.io/cran/MendelianRandomization/man/mr_ivw.html)
+
+[Binary Logistic Regression With R | R-bloggers](https://www.r-bloggers.com/2020/05/binary-logistic-regression-with-r/)
+[8 Bivariate Linear Regression | Lab Guide to Quantitative Research Methods in Political Science, Public Policy & Public Administration](https://bookdown.org/ripberjt/labbook/bivariate-linear-regression.html)
+>节选自一本书：《Lab Guide to Quantitative Research Methods in Political Science, Public Policy & Public Administration》
+>[Lab Guide to Quantitative Research Methods in Political Science, Public Policy & Public Administration (bookdown.org)](https://bookdown.org/ripberjt/labbook/)
+>简单看了一下，对学习R操作还是有点用的
+
+#### 协方差分析
+[ANCOVA in R: The Ultimate Practical Guide - Datanovia](https://www.datanovia.com/en/lessons/ancova-in-r/)
+
+#### 层级回归
+[Hierarchical Regression in R | educational research techniques](https://educationalresearchtechniques.com/2019/02/11/hierarchical-regression-in-r/#google_vignette)
+[R Tutorial Series: Hierarchical Linear Regression | R-bloggers](https://www.r-bloggers.com/2010/01/r-tutorial-series-hierarchical-linear-regression/)
+
+
+
+
+
+
 Pandoc
 pandoc介绍：
 >pandoc是一款文件转换软件，通过它，我们可以实现markdown、html、pdf、latex、ppt、docx等各类文件的相互转换
