--- a/src/site/notes/主页.md
+++ b/src/site/notes/主页.md
@@ -4,6 +4,8 @@
 
 ![images/white-horse-3010129_1920.jpg](/img/user/images/white-horse-3010129_1920.jpg)
 
+这是我的修改，如果成功了说明可以通过GitHub来控制
+
 <font size=5 color='#9AFF9A'><i>🥳🎆🎉✨欢迎来到周俊文的obsidian知识库！</i></font>
 这是周俊文的obsidian空间，我将会在这里记录、收集、展示我学过的知识、技能以及我的一些想法和经验。
 周俊文的知识库网址：[周俊文的obsidian (obsidian-bulid-by-zjw.netlify.app)](https://obsidian-bulid-by-zjw.netlify.app/)
