--- a/src/site/notes/主页.md
+++ b/src/site/notes/主页.md
@@ -3,9 +3,9 @@
 ---
 
 ![images/white-horse-3010129_1920.jpg](/img/user/images/white-horse-3010129_1920.jpg)
-<img src="/img/user/images/white-horse-3010129_1920.jpg"
- art="主页图"
- />
+
+<img src="img/user/images/white-horse-3010129_1920.jpg"
+     alt="主页图" />
 
 这是我的修改，如果成功了说明可以通过GitHub来控制
 
