--- a/src/site/notes/Epidemiology_and_Health_Statistics/卫生统计学/卫生统计学学习.md
+++ b/src/site/notes/Epidemiology_and_Health_Statistics/卫生统计学/卫生统计学学习.md
@@ -12,7 +12,7 @@
 2. ordinal data：序数数据：一种数据类型，它将数据按照一定的顺序排列，但不具备等距性质
 比如说：1代表死亡、2代表重伤、3代表中度伤、4代表轻伤
 3. Rank data：顺序数据
->In some situations, we have a group of observations that are first arranged from highest to lowest according to magnitude and then assigned numbers that correspond to each obser- vation's place in the sequence. [^1]
+>In some situations, we have a group of observations that are first arranged from highest to lowest according to magnitude and then assigned numbers that correspond to each obser- vation's place in the sequence[^1].
 
 <kbd>rank data和ordinal data有什么区别？我认为可能是是否有等距性？或者说，很多个对象的ordinal data 的平均值是没有意义的，而多个对象的rank data平均值是有意义的，它可以反映平均的排名情况？</kbd>
 4. discrete data：离散型数据
@@ -114,7 +114,7 @@ $$S(t)=P(T>t)$$
 $$\widehat{S}(t)=\widehat{S}(t-1)(1-_nq_t)$$
 
 ### 乘积限估计法（Product-Limit Method）
->  The product-limit method of estimating a survival function, also called the Kaplan-Meier method, is a nonparametric technique that uses the exact survival time for each individual in a sample instead of grouping the times into intervals.[^1]
+>  The product-limit method of estimating a survival function, also called the Kaplan-Meier method, is a nonparametric technique that uses the exact survival time for each individual in a sample instead of grouping the times into intervals[^2].
 
 [[Epidemiology_and_Health_Statistics/卫生统计学/Gauvreau, Kimberlee_ Pagano, Marcello - Principles of biostatistics-CRC Press (2018).pdf#page=512&selection=108,30,124,34|Gauvreau, Kimberlee_ Pagano, Marcello - Principles of biostatistics-CRC Press (2018), page 512]]
 
@@ -150,6 +150,7 @@ $$n^*=na+n(1-a)\pi$$
 的人回答yes
 $$n^*-na=n(1-a)\pi$$
 $$\pi=\frac{(n^*/n)-a}{1-a}$$
+
 
 [^1]Gauvreau, Kimberlee_ Pagano, Marcello - Principles of biostatistics-CRC Press (2018), page 27
 [^2]:Gauvreau, Kimberlee_ Pagano, Marcello - Principles of biostatistics-CRC Press (2018), page 512
