--- a/src/site/notes/主页.md
+++ b/src/site/notes/主页.md
@@ -23,8 +23,11 @@
 ### Math
 >[!tip]
 >Math文件夹主要包括本部课程《普通统计学》的作业、总结以及对一些问题的思考。
->特别鸣谢：<font color='7FFFD4'><i>马秦怡同学</i></font>。感谢这位智慧美丽的同学的严谨的治学态度以及不断探索的精神，使该文件夹的内容得到充实。
+>特别鸣谢：<font color='7FFFD4'><i>马秦怡同学</i></font>。感谢这位充满智慧与创意的漂亮同学的严谨的治学态度以及不断探索的精神，使该部分的内容得到充实。
 >如果后续由于研究方向的需要，我也可能会在这里放上其他的一些数学工具。
+
+2023年12月17日更新：应马秦怡同学的邀请，新增了“参考资料”一栏，收集了高数、线代、概统等数学方面的学习资料。点击跳转[[Epidemiology_and_Health_Statistics/math/资料汇总\|资料汇总]]
+之后计划更新学习笔记和心得。
 
 <font size = 4 color='#7FFFD4'>点击跳转：</font>
 [[Epidemiology_and_Health_Statistics/math/pttjx/贝叶斯公式应用题\|贝叶斯公式应用题]]
@@ -47,7 +50,7 @@
 
 <font size = 4 color='#7FFFD4'>点击跳转：</font>
 [[Obsidian学习/HTML语法\|HTML语法]]
-[[Obsidian学习/Mermaid语法\|Mermaid语法]]
+[[Obsidian学习/mermaid学习/Mermaid语法\|Mermaid语法]]
 [[Obsidian学习/CSS语法\|CSS语法]]
 [[Obsidian学习/Callouts模块\|Callouts模块]]
 [[Obsidian学习/obsidian学习日记\|obsidian学习日记]]
