--- a/src/site/notes/主页.md
+++ b/src/site/notes/主页.md
@@ -78,3 +78,6 @@
 [[心理学/朋辈心理辅导/辩证行为疗法/辩证行为疗法第四节课\|辩证行为疗法第四节课]]
 
 [^1]健康传播这门课程的总结任务还很艰巨
+
+---
+一条句子：<font style="font-family: 楷体;"><center>你们要努力走进窄门，因为宽门和阔路引向沉沦，进去的人很多；而窄门和狭道却通向永生，只有少数人能找到。</center></font>
