--- a/src/site/notes/Epidemiology_and_Health_Statistics/math/资料汇总.md
+++ b/src/site/notes/Epidemiology_and_Health_Statistics/math/资料汇总.md
@@ -6,7 +6,7 @@
 把我最近收集到的所有和数学相关的学习资料整理了一下。主要包括一些好评很多的高质量的网课，以及要用到的教材和参考书。参考书可以在这个网盘链接中下载：
 https://disk.pku.edu.cn:443/link/04BE8A7BDC76B89A2CC9C49ECA1DFC8B  
 有效期限：2024-01-15 23:59
-我经常会收集很多资料但不开始学习，探索原理却忽视细节。希望能坚持把这些课程学完学精，为以后的传染病建模打好基础。
+我经常会收集很多资料但不开始学习，探索原理却忽视细节。希望能坚持把这些课程学完学精，为以后的传染病建模打好基础。总之，一起加油吧！
 
 ### 高数：
  网课：
@@ -43,4 +43,8 @@ https://disk.pku.edu.cn:443/link/04BE8A7BDC76B89A2CC9C49ECA1DFC8B
 ### 机器学习
 [机器学习入门学习资料推荐 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/60877739)
 
+---
+一条句子[^1]：<font style="font-family: 楷体;"><center>我们每个人都应该独自到上帝（数学）那里去</center></font>
 
+
+[^1] 为了让笔记带点文艺范同时稍加美观，突然想到的一个小的修饰模块。
