--- a/src/site/notes/主页.md
+++ b/src/site/notes/主页.md
@@ -14,6 +14,7 @@
 >https://www.bilibili.com/video/BV1HF411173m/?spm_id_from=333.1007.top_right_bar_window_history.content.click
 { #2aa95b}
 
+或者参考一下我的使用经验[[Obsidian学习/Digital Garden使用经验\|Digital Garden使用经验]]
 
 ---
 # 目录
