--- a/src/site/notes/Epidemiology_and_Health_Statistics/math/资料汇总.md
+++ b/src/site/notes/Epidemiology_and_Health_Statistics/math/资料汇总.md
@@ -48,4 +48,4 @@ https://disk.pku.edu.cn:443/link/04BE8A7BDC76B89A2CC9C49ECA1DFC8B
 
 
 
-[^1] 为了让笔记带点文艺范同时稍加美观，突然想到的一个小的修饰模块。
+[^1]:为了让笔记带点文艺范同时稍加美观，突然想到的一个小的修饰模块。
