--- a/src/site/notes/Epidemiology_and_Health_Statistics/math/资料汇总.md
+++ b/src/site/notes/Epidemiology_and_Health_Statistics/math/资料汇总.md
@@ -44,7 +44,7 @@ https://disk.pku.edu.cn:443/link/04BE8A7BDC76B89A2CC9C49ECA1DFC8B
 [机器学习入门学习资料推荐 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/60877739)
 
 ---
->一条句子[^1]：<font style="font-family: 楷体;"><center>我们每个人都应该独自到上帝（数学）那里去</center></font>
+>一条句子[^1]：
 
 
 
