--- a/src/site/notes/Epidemiology_and_Health_Statistics/math/资料汇总.md
+++ b/src/site/notes/Epidemiology_and_Health_Statistics/math/资料汇总.md
@@ -6,10 +6,32 @@
 把我最近收集到的所有和数学相关的学习资料整理了一下。主要包括一些好评很多的高质量的网课，以及要用到的教材和参考书。参考书可以在这个网盘链接中下载：
 https://disk.pku.edu.cn:443/link/04BE8A7BDC76B89A2CC9C49ECA1DFC8B  
 有效期限：2024-01-15 23:59
+资料介绍
+1. 高数
+>(1)包括同济版《高等数学》上下册以及配套的习题，pdf的质量一般，介于图片和文字版之间，属于能很清楚底看清楚内容，但是无法识别、复制粘贴内容的水平。
+>(2)《高等数学》北大第二版，高数B的推荐教材，pdf质量同上，以及《高等数学解题指南》，很厚的一本书，专门讲做题的，pdf质量同上，有一点好处是做了个目录，跳转很方便
+>(3)《高等数学》物理类，这是残本，没必要看
+>(4)《普林斯顿微积分读本》当作参考书吧。
+
+2. 线性代数
+>《高等代数》丘维声老师版，上下册以及习题册，pdf质量很不错，线代B推荐教材
+>《线性代数应该这样学》很薄的一本书
+>《简明线性代数》线代B推荐教材，我之前买的，很薄，讲解的内容很少，以习题和定理的直接展示为主
+>《线性代数及其应用》国外教材中译本，可以当作参考书
+
+3. 概率论
+>何书元老师的《概率论》、《概率论和数理统计》（这是概统B的推荐教材），感觉《概率论》比后一本难一点
+>《普林斯顿概率论读本》中译本，可以作为参考书
+
+4. 数学分析
+>《数学分析》《数学分析解题指南》：北大版
+>《普林斯顿数学分析读本》《数学分析原理》国外教材中译本，可以作为参考书
+
 我经常会收集很多资料但不开始学习，探索原理却忽视细节。希望能坚持把这些课程学完学精，为以后的传染病建模打好基础。总之，一起加油吧！
 
+
 ### 高数：
- 网课：
+ 网课：（点击跳转）
 [北大 | 高等数学1-100讲（共109讲 彭立忠教授）_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1Nb411j7Y2/?spm_id_from=333.337.search-card.all.click&vd_source=355965b10a777e5ce7e7212a71618cdc)
 [北大 | 高等数学 101-109讲 （共109讲 彭立中教授）_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1ob411L7my/?spm_id_from=333.999.0.0)
 
@@ -22,7 +44,7 @@ https://disk.pku.edu.cn:443/link/04BE8A7BDC76B89A2CC9C49ECA1DFC8B
 《数学分析》（北大版）
 
 ### 线性代数
-网课：
+网课：（点击跳转）
 [麻省理工学院 - MIT - 线性代数（我愿称之为线性代数教程天花板）_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV16Z4y1U7oU/?spm_id_from=333.337.search-card.all.click&vd_source=355965b10a777e5ce7e7212a71618cdc)
 [北大丘维声教授清华高等代数课程1080P高清修复版(全151集)_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1jR4y1M78W/?spm_id_from=333.337.search-card.all.click)
 麻省理工的虽然是英文，但是据说比较基础且有中文字幕；丘老师的涉及到高等代数，可能难一点。
@@ -33,7 +55,7 @@ https://disk.pku.edu.cn:443/link/04BE8A7BDC76B89A2CC9C49ECA1DFC8B
 3. 线性代数及其应用
 
 ### 概率论
-网课：
+网课：（点击跳转）
 [北大 概率统计_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1yW411G7qz/?spm_id_from=333.337.search-card.all.click&vd_source=355965b10a777e5ce7e7212a71618cdc)
 
 参考教材：
